--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="navbar">
       <a href="./add-your-day.html" class="nav-link">আপনার দিনটি যোগ করুন</a>  
     </div>
-  
+    <br/>
+    <br/>
+    <div class="contribution-graph" id="contributionGraph"></div>
     <div class="typewriter">
         <p id="typedText"></p>
     </div>
@@ -28,7 +30,9 @@
         <th>Gift</th>
       </tr>
     </table>
-  
+    <footer>
+      <p>Developed by <a href="https://your-mojnu-link.com">Mojnu</a> and <a href="https://your-chatgpt-link.com">chatgpt</a></p>
+    </footer>
     <script src="./index-function.js"></script>
   </body>
 
