--- a/add-your-day.html
+++ b/add-your-day.html
@@ -13,7 +13,7 @@
         <p class="title">আপনার দিন যোগ করুন</p> 
         <div class="form">
             <div class="date-picker-container">
-              <input type="text" id="date" class="date-input" name="date" placeholder="তারিখ লিখুন">
+              <input type="date" id="date" class="date-input" name="date" placeholder="তারিখ লিখুন">
             </div>
             <br/> 
             <div class="checkboxes">
