--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <br/>
     <br/>
-    <div class="contribution-graph" id="contributionGraph"></div>
+    <div class="contribution-months" id="contributionMonths"></div>
     <div class="typewriter">
         <p id="typedText"></p>
     </div>
