--- a/damikotha.html
+++ b/damikotha.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>পরে করব !!!</title> 
-    <link rel="stylesheet" href="./index-style.css">
+    <link rel="stylesheet" href="./damikotha.css">
 </head>
 <body>
-    <div class="typewriter">
-        <p id="typedText"></p>
+    <div class="typewriter-container">
+        <div class="typewriter">
+            <p id="typedText"></p>
+        </div>
+        <div class="home-button">
+            <a href="./index.html" class="btn">মূল পেজে ফিরুন</a>
+        </div>
     </div>
     <script src="./damikotha.js"></script>
 </body>
