--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-    <div class="navbar">
-        <a href="./add-your-day.html" class="nav-link">আপনার দিনটি যোগ করুন</a>
-        <a href="./table-view.html" class="nav-link">টেবিলে দেখুন</a>
-        <a href="./damikotha.html" class="nav-link">দামী কথা</a>
+  <div class="navbar">
+    <a href="#" class="nav-logo">Game: Win / Lost</a>
+    <div class="nav-links">
+      <a href="./add-your-day.html" class="nav-link">আপনার দিনটি যোগ করুন</a>
+      <a href="./table-view.html" class="nav-link">টেবিলে দেখুন</a>
+      <a href="./damikotha.html" class="nav-link">দামী কথা</a>
     </div>
-    <br/>
-    <p class="game-title">Game: Win / Lost</p>
+  </div>
     <div class="stats-container">
         <div class="stat">
             <span class="stat-label">আপনি মোট জিতেছেন</span>
