--- a/table-view.html
+++ b/table-view.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>আপনার জেতার হিসাব</title>
-    <link rel="stylesheet" href="./index-style.css">
+    <link rel="stylesheet" href="./table-view.css">
 </head>
 <body>
+    <div class="home-button">
+        <a href="./index.html" class="btn">হোম পেজে ফিরে যান</a>
+    </div>
     <table class="table-center" id="dataTable">
         <tr>
             <th>Date</th>
