--- a/add-your-day.html
+++ b/add-your-day.html
@@ -10,12 +10,11 @@
 
 <body>
     <div class="container">
-        <p class="title">আপনার দিন যোগ করুন</p> 
+      <h1 class="title">আপনার দিন যোগ করুন</h1> <!-- Use <h1> for the title --> 
         <div class="form">
             <div class="date-picker-container">
-              <input type="date" id="date" class="date-input" name="date" placeholder="তারিখ লিখুন">
+              <input type="date" id="date" class="date-input" name="date">
             </div>
-            <br/> 
             <div class="checkboxes">
                 <label><input type="checkbox" name="namaz">৫ ওয়াক্ত নামাজ পড়েছেন?</label>
                 <label><input type="checkbox" name="quran">সকালে কুরআন পড়েছেন?</label> 
@@ -51,7 +50,7 @@
             
 
 
-            <button id="createObject">Create a new day!</button>
+            <button id="createObject">একটি নতুন দিন যোগ করুন</button> 
         </div>
     </div>
 
