--- a/add-your-day.html
+++ b/add-your-day.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-      <h1 class="title">আপনার দিন যোগ করুন</h1> <!-- Use <h1> for the title --> 
+      <h1 class="title">আপনার দিনটি যোগ করুন</h1> <!-- Use <h1> for the title --> 
         <div class="form">
             <div class="date-picker-container">
               <input type="date" id="date" class="date-input" name="date">
