--- a/index.html
+++ b/index.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game: Win / Lost</title>
-    <link rel="stylesheet" href="./index-style.css">
-</head>
+    <link rel="stylesheet" href="./index-style.css" />
+  </head>
 
-<body>
-  <div class="navbar">
-    <a href="#" class="nav-logo">Game: Win / Lost</a>
-    <div class="nav-links">
-      <a href="./add-your-day.html" class="nav-link">আপনার দিনটি যোগ করুন</a>
-      <a href="./table-view.html" class="nav-link">টেবিলে দেখুন</a>
-      <a href="./damikotha.html" class="nav-link">দামী কথা</a>
+  <body>
+    <header class="header">
+      <nav class="navbar">
+        <a href="#" class="nav-logo">Game: Win / Lost</a>
+        <div class="nav-links">
+          <a href="./add-your-day.html" class="nav-link">Add Your Day</a>
+          <a href="./table-view.html" class="nav-link">View Table</a>
+          <a href="./damikotha.html" class="nav-link">Damī Kathā</a>
+        </div>
+      </nav>
+      <h1 class="game-title">Track Your Wins and Losses</h1>
+    </header>
+    <div class="message-container" id="messageContainer">
+      <div class="message-box">
+        <p>
+          You haven't added any day's data yet. Please start by adding your
+          days.
+        </p>
+        <button class="close-button" id="closeButton">Close</button>
+      </div>
     </div>
-  </div>
-    <div class="stats-container">
+    <main class="main-content">
+      <section class="stats-container">
         <div class="stat">
-            <span class="stat-label">আপনি মোট জিতেছেন</span>
-            <span id="totalWinningDays" class="stat-value">0</span> দিন 
+          <span class="stat-label">Total Wins</span>
+          <span id="totalWinningDays" class="stat-value">0</span> Days
         </div>
         <div class="stat">
-            <span class="stat-label">আপনি মোট হেরেছেন</span>
-            <span id="totalLostDays" class="stat-value">0</span> দিন 
+          <span class="stat-label">Total Losses</span>
+          <span id="totalLostDays" class="stat-value">0</span> Days
         </div>
         <div class="stat">
-            <span class="stat-label">আপনার জেতার হার</span>
-            <span id="winningPercentage" class="stat-value">0%</span>
+          <span class="stat-label">Winning Percentage</span>
+          <span id="winningPercentage" class="stat-value">0%</span>
         </div>
-    </div>
-    <div class="contribution-months" id="contributionMonths"></div>
+      </section>
+
+      <section class="contribution-months" id="contributionMonths">
+        <!-- Populated by JavaScript -->
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p>&copy; 2023 Game: Win / Lost. All rights reserved.</p>
+    </footer>
+
     <script src="./index-function.js"></script>
-</body>
-
+  </body>
 </html>
