--- a/add-your-day.html
+++ b/add-your-day.html
@@ -17,15 +17,18 @@
         <input type="date" id="date" class="date-input" name="date" />
       </div>
       <div class="checkboxes">
-        <label><input type="checkbox" name="namaz" />৫ ওয়াক্ত নামাজ</label>
+        <label><input type="checkbox" name="namaz" checked />৫ ওয়াক্ত নামাজ</label>
         <label><input type="checkbox" name="quran" />সকালে কুরআন</label>
         <label><input type="checkbox" name="noSmoking" />সিগারেট খান নি?</label>
         <label><input type="checkbox" name="contactFamily" />পরিবারের সাথে কথা</label>
-        <label><input type="checkbox" name="jobApply" />কমপক্ষে ১ টি MERN চাকরিতে আবেদন</label>
+        <label><input type="checkbox" name="jobApply" checked />কমপক্ষে ১ টি MERN চাকরিতে আবেদন</label>
         <label><input type="checkbox" name="exercise" />ব্যায়াম করেছেন?</label>
-        <label><input type="checkbox" name="mernJob" />৬ ঘন্টা-MERN চাকরি</label>
-        <label><input type="checkbox" name="reactBook" />React.js এক পৃষ্ঠা বই লেখা</label>
-        <label><input type="checkbox" name="certificateStudy" />৬ ঘন্টা সার্টিফিকেটের জন্য পড়া</label>
+        <label><input type="checkbox" name="mernJob" checked />4 ঘন্টা-MERN চাকরি</label>
+        <label><input type="checkbox" name="reactBook" checked />React.js এক পৃষ্ঠা বই লেখা</label>
+        <label><input type="checkbox" name="certificateStudy" checked />৬ ঘন্টা সার্টিফিকেটের জন্য পড়া</label>
+        <label><input type="checkbox" name="water" />৩-৪ লিটার পানি</label>
+        <label><input type="checkbox" name="word" />স্পষ্ট ও গোছালো ভাবে কথা বলা</label>
+        <label><input type="checkbox" name="sleep" /> ৬ ঘন্টা ঘুম</label>
       </div>
 
       <br />
