some feature use future

--- a/add-your-day.html
+++ b/add-your-day.html
@@ -60,7 +60,9 @@
     </div>
   </div>
 
+  <script src="./jwt-decode/build/jwt-decode.js"></script>
   <script src="./add-function.js"></script>
+
 </body>
 
 </html>
