--- a/table-view.html
+++ b/table-view.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>আপনার জেতার হিসাব</title>
     <link rel="stylesheet" href="./table-view.css">
 </head>
+
 <body>
     <div class="home-button">
         <a href="./index.html" class="btn">হোম পেজে ফিরে যান</a>
@@ -19,6 +21,8 @@
             <th>Gift</th>
         </tr>
     </table>
+    <script src="./jwt-decode/build/jwt-decode.js"></script>
     <script src="./table-view.js"></script>
 </body>
+
 </html>
